--- a/app/app.css
+++ b/app/app.css
@@ -1,30 +1,46 @@
-/* app css stylesheet */
 
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+.news-entry h1 {
+    font-size: 48px;
+    margin-top: 40px;
 }
 
-.menu:before {
-  content: "[";
+.news-entry .image-container {
+    margin-top: 50px;
 }
 
-.menu:after {
-  content: "]";
+.news-entry .preview-container {
+    margin-top: 50px;
+    font-size: 26px;
+    padding-left: 40px;
+    padding-right: 20px;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
-.menu > li {
-  display: inline;
+footer {
+    background-image: url('feedpresso_email_header.png');
+    height: 160px;
+    position: fixed;
+    /* position: relative; */
+    bottom: 0;
+    clear: both;
+    z-index: 10;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-color: #263238;
 }
 
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
+html {
+    position: relative;
+    height: 100%;
 }
 
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
+body {
+    min-height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+
+.flexslider-container {
+    height: 100%;
 }
