--- a/app/app.css
+++ b/app/app.css
@@ -18,8 +18,9 @@
 }
 
 footer {
-    background-image: url('feedpresso_email_header.png');
-    height: 160px;
+    /*background-image: url('feedpresso_email_header.png');*/
+    height: 100px;
+    line-height: 100px;
     position: fixed;
     /* position: relative; */
     bottom: 0;
@@ -28,6 +29,12 @@ footer {
     width: 100%;
     background-repeat: no-repeat;
     background-color: #263238;
+}
+
+footer img {
+    margin-left: 60px;
+    vertical-align: middle;
+    height: 60px;
 }
 
 html {
