--- a/app/app.css
+++ b/app/app.css
@@ -1,53 +1,78 @@
-
-.news-entry h1 {
-    font-size: 48px;
-    margin-top: 40px;
+.content-container {
+  margin-bottom: 0px;
+  z-index: 10;
 }
 
-.news-entry .image-container {
-    margin-top: 50px;
-}
 
-.news-entry .preview-container {
-    margin-top: 50px;
-    font-size: 26px;
-    padding-left: 40px;
-    padding-right: 20px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-}
-
-footer {
-    /*background-image: url('feedpresso_email_header.png');*/
-    height: 100px;
-    line-height: 100px;
-    position: fixed;
-    /* position: relative; */
-    bottom: 0;
-    clear: both;
-    z-index: 10;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-color: #263238;
-}
-
-footer img {
-    margin-left: 60px;
-    vertical-align: middle;
-    height: 60px;
-}
-
-html {
-    position: relative;
-    height: 100%;
-}
-
-body {
-    min-height: 100%;
-    margin: 0;
-    overflow: hidden;
+.news-entry {
+  padding: 0;
 }
 
 .flexslider-container {
-    height: 100%;
+  height: 100%;
+}
+
+.background-container {
+  position: fixed;
+  text-align: center; /* ensures the image is always in the h-middle */
+  overflow: hidden; /* hide the cropped portion */
+  z-index: 0;
+}
+
+.background-container img {
+  width: 100%;
+  position: relative; /* allows repositioning */
+  left: 100%; /* move the whole width of the image to the right */
+  margin-left: -200%; /* magic! */
+}
+
+.content-container {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+}
+
+.scrim-full {
+  position: absolute;
+  width: 100%;
+  height: 20em;
+  bottom: 0;
+  left: 0;
+  background-color: black;
+  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,.3));
+  z-index: 5;
+}
+
+.logo-image {
+  width: 160px;
+  margin-bottom: 2ex;
+}
+
+.row {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.heading h1 {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 64px;
+  font-weight: 700;
+  color: white;
+  text-shadow: 2px 2px 6px rgba(0,0,0,.3);
+  text-overflow: ellipsis;
+  overflow: hidden;
+  padding-bottom: .8ex;
+}
+
+.preview {
+  font-family: 'Bitter', serif;
+  font-size: 26px;
+  color: white;
+
+  height: 11ex;
+  margin-left: 1em;
+  margin-bottom: 3ex;
+  padding-bottom: 1ex;
+  overflow: hidden;
 }
