--- a/app/app.css
+++ b/app/app.css
@@ -35,14 +35,16 @@
   overflow: hidden; /* hide the cropped portion */
   z-index: 0;
   width: 100%;
+  height: 100%;
 }
 
 .background-container img {
-  height: 100%;
-  width: 100%;
   position: relative; /* allows repositioning */
   left: 100%; /* move the whole width of the image to the right */
   margin-left: -200%; /* magic! */
+
+  min-width: 100%;
+  min-height: 100%;
 }
 
 .content-container {
