--- a/app/app.css
+++ b/app/app.css
@@ -57,16 +57,15 @@
 .scrim-full {
   position: absolute;
   width: 100%;
-  height: 20em;
+  height: 100%;
   bottom: 0;
   left: 0;
-  background-color: black;
-  background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,.3));
+  background-color: rgba(0,0,0,0.7);
   z-index: 5;
 }
 
 .logo-image {
-  width: 160px;
+  width: 200px;
   margin-bottom: 2ex;
 }
 
@@ -77,7 +76,7 @@
 
 .heading h1 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 64px;
+  font-size: 56pt;
   font-weight: 700;
   color: white;
   text-shadow: 2px 2px 6px rgba(0,0,0,.3);
@@ -87,8 +86,9 @@
 }
 
 .preview {
-  font-family: 'Bitter', serif;
-  font-size: 26px;
+  font-family: 'PT Serif', sans-serif;
+  font-weight: 400;
+  font-size: 24pt;
   color: white;
 
   height: 11ex;
