--- a/app/app.css
+++ b/app/app.css
@@ -86,13 +86,17 @@
 }
 
 .preview {
-  font-family: 'PT Serif', sans-serif;
+  font-family: 'Crete Round', serif;
   font-weight: 400;
   font-size: 24pt;
   color: white;
 
-  height: 11ex;
+  height: 11.1ex;
   margin-bottom: 3ex;
   padding-bottom: 1ex;
   overflow: hidden;
+}
+
+.footer {
+  padding-bottom: 1ex;
 }
