Height limit for title container

--- a/app/app.css
+++ b/app/app.css
@@ -83,6 +83,8 @@
   text-overflow: ellipsis;
   overflow: hidden;
   padding-bottom: .8ex;
+  line-height: 1.2em;
+  max-height: 4.8em;
 }
 
 .preview {
